test/valid/polyfunc.js
function() {
	var f = function(x) { return x; }
	;
	var num = f(3);
	var str = f('a');
}

